src/objects/loan__Month_Process__c.object
<CustomObject>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Month Process</relationshipLabel>
        <relationshipName>Month_Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Last_Day_of_Month__c</fullName>
        <label>Last Day of Month</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Month_End_Process_Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Month End Process Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Month_End_Process_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Month End Process Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Month_Ended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Month Ended</label>
        <type>Checkbox</type>
    </fields>
    <label>Month Process</label>
    <nameField>
        <displayFormat>MPID-{0000000000}</displayFormat>
        <label>Month Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Month Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>